src/styles/base.css
@layer base {
  @font-face {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 100 700;
    font-display: swap;
    src: url('/fonts/IBMPlexSans_wdth,wght.ttf') format('truetype');
  }

  @font-face {
    font-family: 'Sora';
    font-style: normal;
    font-weight: 100 800;
    font-display: swap;
    src: url('/fonts/Sora_wght.ttf') format('truetype');
  }

  @font-face {
    font-family: 'Space Mono';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url('/fonts/SpaceMono.ttf') format('truetype');
  }

  :root {
    @apply bg-surface text-text;
    font-family: 'IBM Plex Sans', sans-serif;
    --navbar-height: 3rem;
  }

  ol {
    @apply list-decimal pl-6;
  }

  ul {
    @apply list-disc pl-6;
  }

  hr {
    @apply w-full border-t-1 border-text-muted place-self-center mt-0.5 mb-3;
  }

  table {
    @apply table-auto border-collapse border-1 border-text-extra-muted bg-surface my-4 w-full;
  }

  tbody tr:nth-child(odd) {
    @apply bg-surface-accent;
  }

  th {
    @apply font-medium text-left text-text-extra-accent bg-surface-extra-accent border-r-1 border-text-extra-muted py-1 px-3;
  }

  tr {
    @apply border-b-1 border-text-extra-muted;
  }

  td {
    @apply px-3 py-1 border-1 border-text-extra-muted;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: 'Sora', sans-serif;
    @apply leading-none;
  }

  h1 {
    @apply font-semibold text-4xl mb-2;
  }

  h2 {
    @apply font-semibold text-3xl;
  }

  h3 {
    @apply font-medium text-2xl;
  }

  h4 {
    @apply font-medium text-xl;
  }

  h5 {
    @apply font-medium text-lg;
  }
}

